components/cert-manager/public-web-gw/05-public-web-passthrough-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: default
  annotations:
    # 让 cert-manager 自动根据路由（HTTPRoute）里的域名去动态生成证书
    cert-manager.io/cluster-issuer: global-ca-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: tls-passthrough-443
      port: 443
      protocol: TLS # 协议必须是 TLS，不能是 HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough # 网关层不解密，直接透传原装密文给后端
        certificateRefs:
          # 指向一个固定的、处在 default 命名空间的默认泛域名证书
          - kind: Secret
            name: global-default-tls
